---------------------------------------------------------------------------------------------------
Version: 1.2.2
  Minor Features:
    - Warn player(s) to enable camera on first (mod) start.

---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: 22-09-2020
  Minor Features:
    - Optionally show entity information in screenshots.

---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 08-09-2020
  Features:
    - Add Area Tracker
    - Choose between sequential or game tick numbering method for the screenshots.
  Gui:
    - Fix width of tracker tab.
  Bugfixes:
    - Fix crash when no entities are build but base camera is active.

---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 03-09-2020
  Bugfixes:
    - Update camera tracker list when name changes while game is paused.

---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 03-09-2020
  Features:
    - Enable/Disable camera smoothness per tracker.
    - Support pausing game when TLBE window is open.
  Minor Features:
    - Delete (unused) trackers.
  Bugfixes:
    - Fix tracker type label.

---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 01-09-2020
  Major Features:
    - Use camera and tracker system.
    - Use in-game GUI.
  Minor Features:
    - (Re)calculate base dimensions when importing TLBE into an existing game.

---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 08-07-2020
  Minor Features:
    - Inform player when TBLE starts to take screenshots. (instead of a notification per screenshot)
  Ease of use:
    - Warn that base dimensions are unknown if TLBE is loaded into an existing game.